<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home_tooltip"
        android:tooltipText="@string/home_tooltip"
        android:icon="@drawable/ic_home"
        android:id="@+id/menu_driver_home"/>
    <item
        android:title="@string/qr_code_fragment_title"
        android:tooltipText="@string/qr_code_fragment_title"
        android:icon="@drawable/ic_qr_code"
        android:id="@+id/menu_driver_qrcode"/>
    <item
        android:title="@string/tricycle_queue_fragment_title"
        android:tooltipText="@string/tricycle_queue_fragment_title"
        android:icon="@drawable/ic_tricycle"
        android:id="@+id/menu_driver_category"/>

    <item
        android:title="@string/settings_fragment_title"
        android:tooltipText="@string/settings_fragment_title"
        android:icon="@drawable/ic_my"
        android:id="@+id/menu_driver_settings"/>
    
</menu>