<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".driver.fragments.DriverGenerateQrFragment">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_code_fragment_title"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_dark"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/qrCodeImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="Scan Me"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:id="@+id/studioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_code_fragment_app_title"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/scanQrTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_code_fragment_set_of_instructions"
            android:textSize="14sp"
            android:textColor="#777777"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            />

        <Button
            android:id="@+id/learnMoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr_code_fragment_view_button"
            android:paddingVertical="15dp"
            style="@style/googleButton"
            android:textColor="#000000"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/addFromGalleryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr_code_fragment_download_button"
            android:paddingVertical="15dp"
            />




    </LinearLayout>

</LinearLayout>