<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".driver.ui.RegisterDriver"
    android:paddingStart="40dp"
    android:paddingEnd="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_register_first_form_sub_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="start"
        android:textColor="@color/orange"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupFirstNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/firstname"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupFirstNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupMiddleNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/middlename"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupMiddleNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupLastNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/lastname"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupLastNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>




</LinearLayout>