<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".driver.ui.TransactionHistory">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/driver_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp">
        >

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:background="@drawable/ripple_effect_icon"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_history"
            android:textSize="18sp"
            android:textColor="@color/primary_text" />



    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />

    <!-- Tabs Layout -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/zxing_transparent"
        app:tabGravity="fill"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabQueueEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queue_button" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabBilling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_button" />

    </com.google.android.material.tabs.TabLayout>

    <!-- ViewPager -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
